Add Readme - Move graph folder

--- a/gqlgen.yml
+++ b/gqlgen.yml
@@ -1,23 +1,23 @@
 schema:
-  - graph/*.graphqls
+  - internal/app/graph/*.graphqls
 
 exec:
-  filename: graph/generated/generated.go
+  filename: internal/app/graph/generated/generated.go
   package: generated
 
 skip_validation: true
 
 model:
-  filename: graph/model/models_gen.go
+  filename: internal/app/graph/model/models_gen.go
   package: model
 
 resolver:
   layout: follow-schema
-  dir: graph
+  dir: internal/app/graph
   package: graph
 
 autobind:
-  - "github.com/charlysan/goneo4jgql/graph/model"
+  - "github.com/charlysan/goneo4jgql/internal/app/graph/model"
 
 models:
   Movie:
